# vendor-json-repo

./: .bazelrc  .gitignore  2019.json  2024.json  2024_metadata.json  2025.json  2025_metadata.json  2025beta.json  2025beta_metadata.json  2026_metadata.json  2026beta_metadata.json  2027_alpha1_metadata.json  2027_alpha5_metadata.json  BUILD.bazel  MODULE.bazel  README.md  add_vendordep.py  azure-pipelines.yml  check.py  check_year_bundle.py  fixup_year.py  generate_bundles.py  generate_year_bundle.py  generate_year_bundles.py  generate_year_manifest.py  requirements.txt  requirements_lock.txt  test_utils.bzl
.github/actions/add_vendordep/: action.yml
.github/workflows/: bazel.yml  bump.yml  generate_bundle.yml  generate_bundles.yml  generate_manifest.yml  main.yml
2019/: Phoenix.ini  Phoenix.json  REVRobotics.json
2024/: PathplannerLib-2024.2.8.json  Phoenix5-5.33.0.json  Phoenix5-5.33.1.json  Phoenix6-24.1.0.json  Phoenix6-24.2.0.json  Phoenix6-24.3.0.json  REVLib-2024.2.0.json  REVLib-2024.2.1.json  REVLib-2024.2.2.json  REVLib-2024.2.3.json  REVLib-2024.2.4.json  ReduxLib-2024.1.1.json  ThriftyLib-0.9.3.json  frcjson-24.3.0.json  frcjson-5.33.1.json
2025/: AdvantageKit-4.0.0-alpha-1.json  AdvantageKit-4.1.1.json  AdvantageKit-4.1.2.json  BadgerLog-2025.3.json  ChoreoLib-2025.0.0.json  ChoreoLib-2025.0.1.json  ChoreoLib-2025.0.2.json  ChoreoLib-2025.0.3.json  ChoreoLib2025.0.0-beta-4.json  DogLog-2025.0.0.json  LumynLabs-2025.0.0.json  LumynLabs-2025.2.0.json  MapleSim-0.2.8.json  NavX-2025.1.1-beta-1.json  PathplannerLib-2025.0.0-beta-3.1.json  PathplannerLib-2025.0.0-beta-3.json  Phoenix5-5.34.0-beta-1.json  Phoenix5-5.34.0-beta-2.json  Phoenix5-5.34.0-beta-3.json  Phoenix5-frc2025-beta-latest.json  Phoenix5-replay-5.34.0-beta-4.json  Phoenix6-25.0.0-beta-1.json  Phoenix6-25.0.0-beta-2.json  Phoenix6-frc2025-beta-latest.json  Phoenix6-replay-25.0.0-beta-1.json  Phoenix6-replay-25.0.0-beta-2.json  Phoenix6-replay-25.0.0-beta-3.json  Phoenix6-replay-25.2.0.json  Phoenix6-replay-25.2.1.json  Phoenix6-replay-25.3.0.json  Phoenix6-replay-25.3.1.json  Phoenix6-replay-25.3.2.json  Phoenix6-replay-25.4.0.json  Phoenix6-replay-frc2025-beta-latest.json  PlayingWithFusion-2025.01.03.json  PlayingWithFusion-2025.01.04.json  REVLib-2025.0.0-beta-1.json  REVLib-2025.0.0-beta-2.json  REVLib-2025.0.0-beta-3.json  REVLib-2025.0.0.json  (+50 more)
2025beta/: AdvantageKit-3.2.1.json  AdvantageKit-4.0.0-beta-1.json  NavX-2025.1.1-beta-1.json  PathplannerLib-2025.0.0-beta-3.json  Phoenix6-25.0.0-beta-3.json  Phoenix6-replay-25.0.0-beta-1.json  Phoenix6-replay-25.0.0-beta-4.json  maple-sim-0.2.0.json  maple-sim-0.2.2.json  yagsl-2025.1.0.1.json  yagsl-2025.1.0.2.json  yagsl-2025.1.0.3.json  yagsl.json
2026/: AdvantageKit-26.0.2.json  Am-Lib-2026.1.0.json  AmLib-2026.0.1.json  AmLib-2026.0.2.json  AmLib-2026.0.3.json  AmLib-2026.0.4.json  ChoreoLib-2026.0.0.json  ChoreoLib-2026.0.1.json  ChoreoLib-2026.0.2.json  ChoreoLib-2026.0.3.json  LumynLabs-2026.0.0.json  LumynLabs-2026.1.2.json  LumynLabs-2026.2.0.json  Phoenix6-replay-26.1.0.json  Phoenix6-replay-26.1.1.json  Phoenix6-replay-26.1.2.json  Phoenix6-replay-26.1.3.json  Phoenix6-replay-26.2.0.json  Phoenix6-replay-26.3.0.json  PlayingWithFusion-2026.1.16.json  PlayingWithFusion-2026.2.09.json  PlayingWithFusion-2026.2.13.json  PlayingWithFusion-2026.2.25.json  PlayingWithFusion-2026.3.05.json  PlayingWithFusion-2026.3.28.json  PlayingWithFusion-2026.5.08.json  REVLib-2026.0.0.json  REVLib-2026.0.1.json  REVLib-2026.0.2.json  REVLib-2026.0.3.json  REVLib-2026.0.4.json  REVLib-2026.0.5.json  ReduxLib-2026.1.1.json  ReduxLib-2026.1.2.json  Studica-2026.0.0.json  StudicaLib-2026.0.0.json  StudicaLib-2026.0.1.json  StudicaLib-2026.0.2.json  ThriftyLib-2026.0.0.json  ThriftyLib-2026.0.1.json  (+41 more)
2026beta/: AdvantageKit-26.0.0-beta-1.json  ChoreoLib-2026.0.0-beta-1.json  LumynLabs-2026.0.0-beta-1.json  LumynLabs-2026.0.0.-beta-1.json  Phoenix5-replay-5.36.0-beta-1.json  Phoenix6-replay-26.0.0-beta-1.json  REVLib-2026.0.0-beta-1.json  Studica-2026.0.0-beta.json  StudicaLib-2026.0.1-beta.json  ThriftyLib-2026-beta.json  ThriftyLib-2026.0.0-beta-1.json  libgrapplefrc2026beta.json  yagsl-2025.12.30.json  yagsl-2026.1.11.json  yams-2026.01.01.1.json  yams-2026.01.01.json  yams-2026.1.2.json
2027_alpha1/: AdvantageKit-27.0.0-alpha-1.json  AdvantageKit-27.0.0-alpha-2.json  ChoreoLib-2027.0.0-alpha-1.json  PathplannerLibSystemCoreAlpha-2027.0.0-alpha-1.json  Phoenix6-25.90.0-alpha-1.json  Phoenix6-25.90.0-alpha-2.json  REVLib-2027.0.0-alpha-1.json  ReduxLib-2027.0.0-alpha-2.json
2027_alpha5/: AdvantageKit-27.0.0-alpha-4.json  AmLib-2027.0.2-alpha5.json  PathplannerLib-2027.0.0-alpha-3.json  Phoenix6-26.50.0-alpha-1.json  Phoenix6-replay-26.50.0-alpha-1.json  REVLib-2027.0.0-alpha2.json  REVLib-2027.0.0-alpha3.json  REVLib-2027.0.0-alpha4.json  ThriftyLib-2027.0.0-alpha-1.json  photonlib-v2027.0.0-alpha-1.json
