load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@vendor-json-repo-pip//:requirements.bzl", "requirement")
load("//:test_utils.bzl", "vendordep_check_test", "year_bundle_test")

# bazel run //:requirements.update
compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "requirements.txt",
    requirements_txt = "requirements_lock.txt",
)

py_binary(
    name = "check",
    srcs = ["check.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("pyelftools"),
        requirement("pefile"),
    ],
)

py_binary(
    name = "check_year_bundle",
    srcs = ["check_year_bundle.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "add_vendordep",
    srcs = ["add_vendordep.py"],
)

# Change this for local testing only.
cache_directory = None

YEAR_2024_FILES = glob(["2024/*.json"])
[vendordep_check_test(
    allowable_errors = 1,
    allowable_warnings = None,
    cache_directory = cache_directory,
    vendor_file = f,
) for f in YEAR_2024_FILES]
# year_bundle_test(year="2024", year_files=YEAR_2024_FILES) # Disable the test because there a several invalid entries

YEAR_2025BETA_FILES = glob(["2025beta/*.json"])
[vendordep_check_test(
    allowable_errors = 0,
    allowable_warnings = None,
    cache_directory = cache_directory,
    vendor_file = f,
) for f in YEAR_2025BETA_FILES]
year_bundle_test(year="2025beta", year_files=YEAR_2025BETA_FILES)
